--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Jul 05 13:15:03 JST 2019
+#Thu Jul 18 16:13:03 CST 2019
 spawn-protection=16
 max-tick-time=60000
 query.port=25565
@@ -11,7 +11,7 @@ gamemode=survival
 broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
-difficulty=hard
+difficulty=normal
 spawn-monsters=true
 broadcast-rcon-to-ops=true
 op-permission-level=4
@@ -20,26 +20,26 @@ snooper-enabled=true
 level-type=default
 hardcore=false
 enable-command-block=true
-max-players=20
+max-players=5
 network-compression-threshold=256
 resource-pack-sha1=
 max-world-size=29999984
 rcon.port=25575
-server-port=25565
+server-port=3331
 server-ip=
 spawn-npcs=true
 allow-flight=true
-level-name=World03
+level-name=World04
 view-distance=10
 resource-pack=
 spawn-animals=true
 white-list=false
 rcon.password=
 generate-structures=true
-max-build-height=256
 online-mode=true
-level-seed=92554726693344368
-prevent-proxy-connections=false
+max-build-height=256
+level-seed=7180158553112783131
 use-native-transport=true
-enable-rcon=false
+prevent-proxy-connections=false
 motd=Praise the 141
+enable-rcon=false
